@@ -42,6 +42,13 @@ Core and Builtins
 Library
 -------
 
+- Issue #28253: Fixed calendar functions for extreme months: 0001-01
+  and 9999-12.
+
+  Methods itermonthdays() and itermonthdays2() are reimplemented so
+  that they don't call itermonthdates() which can cause datetime.date
+  under/overflow.
+
 - Issue #27963: Fixed possible null pointer dereference in
   ctypes.set_conversion_mode().  Patch by Xiang Zhang.
 
